# academia_vxv

./: .gitignore  README.md  pyproject.toml
.github/workflows/: weekly-content.yml
content/academy_context/: README.md  mission.example.md  vision.example.md
docs/: github-actions-setup.md  merge-pr-help.md
src/academia_content/: __init__.py  cli.py  context.py  generator.py  openai_client.py  prompts.py  telegram.py
src/francaisfacile_scraper/: __init__.py  cli.py  markdown.py  models.py  parser.py  scraper.py
tests/: test_academia_content.py  test_parser_markdown.py
